# sctp

./: CMakeLists.txt  README.org
include/sctp/: road_graph.h
input_test/datos1-36-7/: LEEME.txt  salida1.txt  salida10.txt  salida2.txt  salida3.txt  salida4.txt  salida5.txt  salida6.txt  salida7.txt  salida8.txt  salida9.txt
input_test/datos14/datosPractica1/: generacion.txt
input_test/datos14/datosPractica1/datos_prueba/: aleatorio-denso-10.txt  aleatorio-denso-150.txt  (+31 more)
input_test/datos15/: ._Generación de datos.txt  Generación de datos.txt
input_test/datos19/: README.txt  datosPractica11.txt  datosPractica110.txt  datosPractica111.txt  datosPractica112.txt  datosPractica113.txt  datosPractica114.txt  datosPractica115.txt  datosPractica116.txt  datosPractica117.txt  datosPractica118.txt  datosPractica119.txt  datosPractica12.txt  datosPractica120.txt  datosPractica121.txt  datosPractica122.txt  datosPractica123.txt  datosPractica124.txt  datosPractica125.txt  datosPractica126.txt  datosPractica127.txt  datosPractica128.txt  datosPractica129.txt  datosPractica13.txt  datosPractica14.txt  datosPractica15.txt  datosPractica16.txt  datosPractica17.txt  datosPractica18.txt  datosPractica19.txt  datos_P1_1.txt  datos_P1_10.txt  datos_P1_11.txt  datos_P1_12.txt  datos_P1_13.txt  datos_P1_14.txt  datos_P1_15.txt  datos_P1_16.txt  datos_P1_17.txt  datos_P1_18.txt  (+14 more)
input_test/examples/: 10.txt  100.txt  150.txt  200.txt  225.txt  25.txt  250.txt  275.txt  3.txt  300.txt  5.txt  50.txt  75.txt  README.txt
input_test/mine/: ok4.txt
src/: main.cc  road_graph.cc
