cmake_minimum_required(VERSION 3.4)
project(SCTP)
find_package(Threads)
set(CMAKE_CXX_STANDARD 11)
set(SRCS src/road_graph.cc src/main.cc)
set(HDRS include/sctp/road_graph.h)
add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
target_include_directories(${PROJECT_NAME} PUBLIC include)
target_link_libraries(${PROJECT_NAME} Threads::Threads)
